# ramp

./: .gitignore  2017-10-19-13-49-43.bag.REMOVED.git-id  NewWorld_1.sdf  README.md  ROS_gcov_lcov.md  compute_abtcs.py  get_data.sh  install_reflexxes.sh  plot-chart.py
Reflexxes/TypeII/: RMLInputParameters.h  RMLOutputParameters.h  RMLPositionFlags.h  RMLPositionInputParameters.h  RMLPositionOutputParameters.h  RMLVelocityFlags.h  RMLVelocityInputParameters.h  RMLVelocityOutputParameters.h  ReflexxesAPI.h
data/: cycle-data (1).tgn  environment-data.tgn  execution-data.tgn  general-info.tgn  plot-chart.py  procedures-times (1).tgn  tables.aux  tables.tex
data/1_ob/: 1_ob_all_data.mat  get_data.m  get_data.m~  get_values.m
data/system-level-testing/: get_data.m  pie_chart.eps  tl_hist.eps
keras_rl/examples/: ddpg_Pendulum-v0_weights_actor.h5f  ddpg_Pendulum-v0_weights_critic.h5f  ddpg_Pendulum-v0_weights_target_actor.h5f  ddpg_Pendulum-v0_weights_target_critic.h5f  ddpg_pendulum.py  dqn_CartPole-v0_weights.h5f  dqn_cartpole.py  dqn_cdd.py  dqn_pdd.py
keras_rl/rl/: callbacks.py  core.py  memory.py  policy.py  random.py
laser_filters/examples/: range_filter.yaml
laser_filters/launch/: range_filter.launch
path_modification/: CMakeLists.txt  durations.txt  package.xml
path_modification/include/: change.h  constraints.h  crossover.h  delete.h  insert.h  modifier.h  move.h  repair.h  swap.h  utility.h
path_modification/src/: change.cpp  constraints.cpp  crossover.cpp  delete.cpp  insert.cpp  main.cpp  modifier.cpp  move.cpp  repair.cpp  swap.cpp
path_modification/test/: range_test.cpp
path_modification/test/constraints/: constraints_test.cpp
path_modification/test/delete/: delete_test.cpp
path_modification/test/range/: range_max_test.cpp  range_min_test.cpp  range_test.cpp
path_modification/test/repair/: repair_test.cpp
path_modification/test/swap/: swap_test.cpp
ramp/: manager.py  manager_sip.py  manager_sipd.py  package.xml
ramp_control/: CMakeLists.txt
ramp_control/src/: frames.gv  main.cpp  mobile_robot.cpp  utility.cpp
ramp_debug/src/: publish_trajectory_command.cpp  test_collision.cpp  test_move_op.cpp
ramp_launch/: robot_costmap.rviz
ramp_launch/launch/: costmap.launch  frames.gv  full_simulation.launch  gazebo.launch  gazebo_costmap.launch  gazebo_costmap_sipd.launch  gazebo_costmap_tmp.launch  gazebo_system_level_testing.launch  get_static_obs.launch  multi_obs.launch  my_turtlebot_world_empty.launch  (+24 more)
ramp_msgs/: CMakeLists.txt  package.xml
ramp_planner/: CMakeLists.txt  config.yaml  config.yaml.orig  obstacle_tf.txt  package.xml
ramp_profiler/: CMakeLists.txt  package.xml
ramp_profiler/launch/: profileTest.launch
ramp_profiler/src/: profiler.cpp
ramp_profiler/timings/path_modification/: Change-Perform.csv  Constraints-ValidKPForPath.csv  Crossover-Perform.csv  Delete-Perform.csv  Insert-Perform.csv  Main-HandleRequest.csv  Modifier-Perform.csv  Repair-Perform.csv  Swap-Perform.csv
ramp_profiler/timings/ramp_planner/: Modifier-Perform.csv  Planner-AfterEvalReq.csv  Planner-AfterEvalReq|hmap.csv  Planner-AfterTrajReq.csv  Planner-BeforeEvalReq.csv  Planner-BeforeEvalReq|hmap.csv  Planner-BeforeTrajReq.csv  Planner-BuildModReq.csv  Planner-Go.csv  Planner-ModifyPath.csv  Planner-RequestEvaluation.csv  Planner-RequestEvaluation|hmap.csv  Planner-RequestTrajectory.csv
ramp_profiler/timings/trajectory_generator/: Main-CheckGoal.csv  Main-FixDuplicates.csv  Main-RequestCallback|CheckGoal.csv  Main-RequestCallback|Start.csv  Main-RequestCallback|TrajReq.csv  MobileBase-Bezier.csv  MobileBase-BuildTrajectoryPoint.csv  MobileBase-GetCurveKPs.csv  MobileBase-RotateOOP.csv  MobileBase-SetInitialMotion.csv  MobileBase-SetTarget.csv  MobileBase-TrajectoryRequest.csv  Utility-FindAngleFromAToB.csv  Utility-GetTrajectoryPoint.csv
ramp_rlpara/: CMakeLists.txt  package.xml
ramp_sensing/: CMakeLists.txt  durations.txt  example.pgm  example.yaml  hilbert_map.csv  hilbert_map_high_gamma.csv  package.xml  queryTimes.txt
rl_data/: process_raw_data.py
test/: test_path_dcoe_discre.py  test_ramp.py
trajectory_evaluation/: CMakeLists.txt  durations.txt  package.xml
trajectory_generator/: CMakeLists.txt  durations.txt  package.xml
trajectory_visualisation/: CMakeLists.txt
(+1787 files in other folders)
